--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@ float:left;
 text-align:center;
 width: 100%;
 }
+#site {
+float:left;
+text-align:left;
+font-size:5px;
+width: 100%;
+}
 </style>
 
 
@@ -108,6 +114,10 @@ width: 100%;
         </div>
         <div id='bottom'>
         <h1 id='title'>chapu's cube</h1>
+        </div>
+        </div>
+        <div id='site'>
+        <h1><a href="http://myshumi.net">myshumi.net</a></h1>
         </div>
 
         </body>
